# pytest-workshop-sample

./: Readme.md  pyproject.toml
demo/: foo.py
docker/: Dockerfile  init.sql
test/: test_foo.py
