[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Demo project for pytest workshop"
authors = ["Tim Shih <tshih@netbasequid.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.pytest.ini_options]
# addopts = "--cov=demo --cov-report=term-missing"
# junit_duration_report = "call"
